# Mayerism

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  commands.txt  formatcode.sh  installer.iss
.agent/workflows/: add-independent-io-controls.md
.cache/clangd/index/: AlignedBox.h.AB364EA486104343.idx  AmbiVector.h.275C660FCA55041F.idx  Amd.h.6D6FF92EFDB581D1.idx  AngleAxis.h.E5D084AB24AD54D8.idx  ArithmeticSequence.h.D993EB6AC662CEE0.idx  Array.h.305FF5D64B85FFA9.idx  ArrayBase.h.D2F2483C2E802240.idx  ArrayCwiseBinaryOps.h.9D0475E3EDD91E83.idx  ArrayCwiseUnaryOps.h.83B47A9B0977B55D.idx  ArrayWrapper.h.B12152AE224ECB8B.idx  Assert.h.F56999720E880D61.idx  AssetManager.h.AB4099AA3438F68A.idx  Assign.h.B37E8B15D5662C86.idx  AssignEvaluator.h.62CF3B712BB89D13.idx  AssignmentFunctors.h.884330FE4260EFA6.idx  BDCSVD.h.778E614F6F11D012.idx  BFloat16.h.CB06F004B54AFA5C.idx  BVAlgorithms.h.BFC12B74CCBCE2A6.idx  BVH.7AA9C4B62B423777.idx  BVH_Example.cpp.721BBD090E9568DE.idx  BandMatrix.h.BFF42CEE2368005B.idx  BasicPreconditioners.h.6BCF75AFFD1F9E3E.idx  BesselFunctionsArrayAPI.h.057085A30DAD6287.idx  BesselFunctionsBFloat16.h.58E9F2343A8FDAF5.idx  BesselFunctionsFunctors.h.E6D01FC361CBB1B5.idx  BesselFunctionsHalf.h.7F71486B0653222B.idx  BesselFunctionsImpl.h.9B35A8748DECBC44.idx  BesselFunctionsPacketMath.h.F9B4C79681803837.idx  BiCGSTAB.h.A631762442F670F9.idx  BiCGSTABL.h.E51F04B71D59A253.idx  BinaryFunctors.h.FE569DD2143AFB1C.idx  BlasUtil.h.BC75198A34032B67.idx  Block.h.C8CA48F31B42AF3B.idx  BlockHouseholder.h.2F77934A1F27F831.idx  BlockMethods.h.F6F07AA5F49BA4C7.idx  Cholesky.859FC681A615EDD8.idx  ColPivHouseholderQR.h.A19E8E769807D8B7.idx  CommaInitializer.h.A232D86BCE86767E.idx  CommonCwiseBinaryOps.h.CC2C02B3955A807A.idx  CommonCwiseUnaryOps.h.8DFF7DA9EE61CD78.idx  (+1691 more)
.github/workflows/: debug-notary-log.yml  macos-build-intel.yml  macos-build.yml  macos-universal-build.yml  windows-build.yml
Assets/: CMakeLists.txt  distribution.xml
Assets/AmpModels/: tworock.nam
Assets/Installer/: Welcome.html  distribution.xml
CMake/: helpers.cmake
Scripts/: build_with_asio.py  generate_mac_installer.py  generate_windows_installer.py  requirments.txt
Scripts/resources/: license.rtf
Source/: AssetManager.h  CMakeLists.txt  DoublerProcessor.h  EqEditor.cpp  EqEditor.h  EqProcessor.cpp  EqProcessor.h  LedButtonComponent.h  MyLookAndFeel.h  NamEditor.cpp  NamEditor.h  NeuralAmpModeler.cpp  NeuralAmpModeler.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ResamplingNAM.h  StandaloneSettingsComponent.h  StatusedTrigger.cpp  StatusedTrigger.h  ToneStack.cpp  ToneStack.h  TopBarComponent.cpp  TopBarComponent.h
Source/CustomStandaloneWindow/: CMakeLists.txt  CustomStandaloneClient.cpp  CustomStandaloneFilterApp.cpp  CustomStandaloneFilterWindow.h
Source/PresetManager/: PresetManager.cpp  PresetManager.h  PresetManagerComponent.cpp  PresetManagerComponent.h
Source/pedals/Chorus/: ChorusProcessor.h
Source/pedals/CleanBoost/: CleanBoostProcessor.h
Source/pedals/Compressor/: CompressorProcessor.h
Source/pedals/Delay/: DelayProcessor.h
Source/pedals/KlonCentaur/: KlonProcessor.cpp  KlonProcessor.h  klon_pch.h
Source/pedals/KlonCentaur/dependencies/toms917/: toms917.cpp
Source/pedals/KlonCentaur/dsp/: AmpStage.h  DiodePair.h  FeedForward2.h  GainStageProc.cpp  GainStageProc.h  InputBufferProcessor.h  OutputStageProcessor.h  PreAmpStage.h  SummingAmp.h  ToneFilterProcessor.h
Source/pedals/Reverb/: ReverbProcessor.h
Source/pedals/TubeScreamer/: TSProcessor.cpp  TSProcessor.h
Source/pedals/TubeScreamer/dsp/: ClipWDFa.h  ClipWDFb.h  ClipWDFc.h  ClippingStage.h  ToneStage.h
